# fairbench

./: LICENSE  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: docs.yml
docs/: FAIRBench.md  FAIRBench_Metrics_Specification.md  architecture.md  benchmark-spec.md  fairbench_presentation.md  index.md  metrics.md  reading-your-scorecard.md
docs/getting-started/: image-quickstart.md  installation.md  text-quickstart.md
docs/javascripts/: mermaid.js
examples/: benchmark_template.yaml  gender_audit.yaml  gender_occupation_openai_audit.yaml  soccer_dalle_audit.yaml  soccer_image_benchmark.py
src/fairbench/: __init__.py
src/fairbench/adapters/: __init__.py  anthropic.py  base.py  dalle.py  http_webhook.py  openai.py  openai_compatible.py  registry.py
src/fairbench/adapters/image/: __init__.py  base.py  dalle.py  stable_diffusion.py
src/fairbench/cli/: __init__.py  main.py
src/fairbench/core/: __init__.py  benchmark.py  config.py  engine.py  exceptions.py  image_engine.py  image_types.py  types.py
src/fairbench/counterfactual/: __init__.py  generator.py  templates.py
src/fairbench/evaluation/: __init__.py  base.py  demographic.py  embeddings.py  llm_judge.py  pipeline.py  refusal.py  sentiment.py  toxicity.py  triage.py
src/fairbench/evaluation/image/: __init__.py  clip_evaluator.py  vision_analyzer.py
src/fairbench/metrics/: __init__.py  base.py  baselines.py  cds.py  dsi.py  hsi.py  ode.py  rsi.py  sar.py
src/fairbench/reporting/: __init__.py  html_report.py  markdown.py  scorecard.py
src/fairbench/scenarios/: __init__.py  base.py  registry.py
src/fairbench/scenarios/builtin/: cds_benchmark.yaml  dsi_benchmark.yaml  gender_occupation.yaml  (+6 more)
src/fairbench/storage/: __init__.py  base.py  sqlite.py
tests/: __init__.py  test_metrics.py  test_scenarios.py
(+1 files in other folders)
